--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -9,14 +9,15 @@
 
 #form {
     padding-bottom: 1rem;
-    width: 55vw;
-    height: 55vh;
+    /* width: 55vw;
+    height: 55vh; */
     background-color: rgba(21, 16, 16, 0.879);
     border-radius: 1.5rem 1.5rem 0 1.5rem;
     box-shadow: 15px 15px 15px 5px rgba(9, 0, 59, 0.6);
 }
 
-#userName, #pass {
+#userName,
+#pass {
     display: flex;
     flex-direction: column;
     padding: 0 2rem 0 2rem;
@@ -65,4 +66,25 @@
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+}
+
+@media (min-width: 1080px) {
+    #form {
+        width: 35vw;
+        height: 50vh;
+    }
+}
+
+@media (max-width: 1024px) {
+    #form {
+        width: 60vw;
+        height: 50vh;
+    }
+}
+
+@media (max-width: 800px) {
+    #form {
+        width: 80vw;
+        height: 50vh;
+    }
 }
