--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,11 @@
     border: 0.5px solid rgba(13, 5, 58, 0.1);
     margin-top: 5rem;
 }
-/* #father2{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-} */
+
+#contentCompleted {
+    width: 75%;
+    border-radius: 1rem 0 1rem 1rem;
+    box-shadow: 10px 10px 10px 2px rgba(3, 76, 9, 0.6);
+    border: 0.5px solid #0d053a1a;
+    margin-top: 5rem;
+}
