--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,55 +1,10 @@
 @media (max-width: 680px) {
-    #slideBar {
-        display: none;
-    }
-    #weather {
-        display: none;
-    }
-    #weather2 {
-        height: auto;
-        font-size: small;
-        text-align: center;
-    }
-    #quote {
-        font-size: 16px;
-    }
+  #slideBar {
+    min-width: 40rem;
   }
-  
-  #buttonTagg {
-    background-color: rgb(193, 48, 48);
-  }
-  
-  #op {
-    color: white;
-    font-weight: bold;
-  }
-  
-  #op:hover {
-    color: rgb(255, 230, 0);
-    background-color: brown;
-  }
-  
-  i {
-    padding-right: 1rem;
-    font-size: 1.3rem;
-  }
-  
-  #options {
-    background-color: rgb(225, 123, 27);
-  }
-  
-  @media (min-width: 680px) {
-    #topBar {
-        display: none;
-    }
-  }
-  
-  #menu {
-    width: 240px;
-    background-color: rgb(118, 33, 33);
-  }
-  
-  #menu2 {
-    width: 100vw;
-    background-color: rgb(118, 33, 33);
-  }
+}
+
+#menu {
+  width: 240px;
+  background-color: rgb(118, 33, 33);
+}
