--- a/src/index.css
+++ b/src/index.css
@@ -13,18 +13,46 @@
     justify-content: space-evenly;
 }
 
+#father2{
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 #content2 {
-    width: 75%;
+    width: 90%;
+    height: 80%;
+    overflow-y: auto;
     border-radius: 1rem 0 1rem 1rem;
     box-shadow: 10px 10px 10px 2px rgba(13, 5, 58, 0.6);
     border: 0.5px solid rgba(13, 5, 58, 0.1);
-    margin-top: 5rem;
 }
 
 #contentCompleted {
-    width: 75%;
+    width: 90%;
+    height: 80%;
+    overflow-y: auto;
     border-radius: 1rem 0 1rem 1rem;
     box-shadow: 10px 10px 10px 2px rgba(3, 76, 9, 0.6);
     border: 0.5px solid #0d053a1a;
-    margin-top: 5rem;
+}
+
+@media (min-width: 1080px) {
+    #content2, #contentCompleted, #content {
+        width: 75%;
+    }
+}
+
+@media (max-width: 1024px) {
+    #content2, #contentCompleted, #content {
+        width: 70%;
+    }
+}
+
+@media (max-width: 1000px) {
+    #content2, #contentCompleted, #content {
+        width: 90%;
+    }
 }
