--- a/src/components/sign-up/SignUp.css
+++ b/src/components/sign-up/SignUp.css
@@ -2,8 +2,9 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
     background-color: rgba(0, 157, 39, 0.711);
 }
 
