--- a/src/index.css
+++ b/src/index.css
@@ -14,16 +14,28 @@
 }
 
 #father2{
-    height: 75vh;
+    height: 95%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+#filter {
+    text-align: center;
+    box-shadow: 4px 4px 4px 1px rgba(13, 5, 58, 0.6);
+}
+
+#filtrado {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
 }
 
 #content2 {
     width: 90%;
-    height: 80%;
+    height: 65%;
     overflow-y: auto;
     border-radius: 1rem 0 1rem 1rem;
     box-shadow: 10px 10px 10px 2px rgba(13, 5, 58, 0.6);
@@ -40,19 +52,19 @@
 }
 
 @media (min-width: 1080px) {
-    #content2, #contentCompleted, #content {
+    #content2, #contentCompleted, #content, #filter {
         width: 75%;
     }
 }
 
 @media (max-width: 1024px) {
-    #content2, #contentCompleted, #content {
+    #content2, #contentCompleted, #content, #filter {
         width: 70%;
     }
 }
 
 @media (max-width: 1000px) {
-    #content2, #contentCompleted, #content {
+    #content2, #contentCompleted, #content, #filter {
         width: 90%;
     }
 }
