--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 #content {
     width: 70%;
     border-radius: 1rem 0 1rem 1rem;
@@ -6,14 +5,14 @@
     border: 0.5px solid rgba(13, 5, 58, 0.1);
 }
 
-#father{
+#father {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
-#father2{
+#father2 {
     height: 95%;
     display: flex;
     align-items: center;
@@ -51,20 +50,16 @@
     border: 0.5px solid #0d053a1a;
 }
 
-@media (min-width: 1080px) {
-    #content2, #contentCompleted, #content, #filter {
-        width: 75%;
-    }
-}
 
-@media (max-width: 1024px) {
-    #content2, #contentCompleted, #content, #filter {
+@media (min-width: 1024px) {
+    #content2,
+    #contentCompleted,
+    #content, #filter {
         width: 70%;
     }
-}
 
-@media (max-width: 1000px) {
-    #content2, #contentCompleted, #content, #filter {
-        width: 90%;
+    
+    #filtrado {
+        width: 50%;
     }
 }
