--- a/src/components/sign-up/SignUp.css
+++ b/src/components/sign-up/SignUp.css
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     background-color: rgba(0, 157, 39, 0.711);
+    padding-bottom: 6rem;
 }
 
 #form {
