--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -10,8 +10,6 @@
 
 #form {
     padding-bottom: 1rem;
-    /* width: 55vw;
-    height: 55vh; */
     background-color: rgba(21, 16, 16, 0.879);
     border-radius: 1.5rem 1.5rem 0 1.5rem;
     box-shadow: 15px 15px 15px 5px rgba(9, 0, 59, 0.6);
@@ -71,35 +69,75 @@
 
 @media (min-width: 1080px) {
     #form {
-        width: 35vw;
-        height: 50vh;
+        width: 35%;
+        height: 50%;
     }
 }
 
 @media (max-width: 1024px) {
     #form {
-        width: 60vw;
-        height: 50vh;
+        width: 60%;
+        height: 50%;
+    }
+}
+
+@media (min-width: 1080px) {
+    #form {
+        width: 35%;
+        height: 70%;
+    }
+}
+
+@media (max-width: 1024px) {
+    #form {
+        width: 60%;
+        height: 70%;
     }
 }
 
 @media (max-width: 800px) {
     #form {
-        width: 80vw;
-        height: 50vh;
+        width: 80%;
+        height: 70%;
     }
 }
 
-/* -------------------------------- */
+@media (max-width: 600px) {
+    #form {
+        width: 80%;
+        height: 65%;
+    }
+}
+
+@media (max-width: 580px) {
+    #form {
+        width: 80%;
+        height: 65%;
+    }
+}
+
+@media (max-width: 480px) {
+    #form {
+        font-size: small;
+        width: 80%;
+        height: 60%;
+        padding: 1rem;
+    }
+    h4 {
+        font-size: 20px;
+    }
+}
+
+/* -------------- */
 
 section .air {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100vw;
-    height: 100px;
+    height: 40px;
     background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
-    background-size: 1000px 100px
+    background-size: 1000px 100px;
 }
 
 section .air.air1 {
@@ -115,7 +153,7 @@ section .air.air2 {
     z-index: 999;
     opacity: 0.5;
     animation-delay: -5s;
-    bottom: 10px;
+    bottom: 0;
 }
 
 section .air.air3 {
@@ -123,7 +161,7 @@ section .air.air3 {
     z-index: 998;
     opacity: 0.2;
     animation-delay: -2s;
-    bottom: 15px;
+    bottom: 0;
 }
 
 section .air.air4 {
@@ -131,7 +169,7 @@ section .air.air4 {
     z-index: 997;
     opacity: 0.7;
     animation-delay: -5s;
-    bottom: 20px;
+    bottom: 0;
 }
 
 @keyframes wave {
