--- a/src/components/sign-up/SignUp.css
+++ b/src/components/sign-up/SignUp.css
@@ -2,11 +2,9 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     background-color: rgba(0, 157, 39, 0.711);
-    padding-bottom: 6rem;
 }
 
 #form {
@@ -56,22 +54,49 @@
 
 @media (min-width: 1080px) {
     #form {
-        width: 35vw;
-        height: 55vh;
+        width: 35%;
+        height: 70%;
     }
 }
 
 @media (max-width: 1024px) {
     #form {
-        width: 60vw;
-        height: 55vh;
+        width: 60%;
+        height: 70%;
     }
 }
 
 @media (max-width: 800px) {
     #form {
-        width: 80vw;
-        height: 55vh;
+        width: 80%;
+        height: 70%;
+    }
+}
+
+@media (max-width: 600px) {
+    #form {
+        width: 80%;
+        height: 65%;
+    }
+}
+
+@media (max-width: 580px) {
+    #form {
+        width: 80%;
+        height: 70%;
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    #form {
+        font-size: small;
+        width: 80%;
+        height: 70%;
+        padding: 1rem;
+    }
+    h4 {
+        font-size: 20px;
     }
 }
 
@@ -82,9 +107,9 @@ section .air {
     bottom: 0;
     left: 0;
     width: 100vw;
-    height: 100px;
+    height: 40px;
     background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
-    background-size: 1000px 100px
+    background-size: 1000px 100px;
 }
 
 section .air.air1 {
@@ -100,7 +125,7 @@ section .air.air2 {
     z-index: 999;
     opacity: 0.5;
     animation-delay: -5s;
-    bottom: 10px;
+    bottom: 0;
 }
 
 section .air.air3 {
@@ -108,7 +133,7 @@ section .air.air3 {
     z-index: 998;
     opacity: 0.2;
     animation-delay: -2s;
-    bottom: 15px;
+    bottom: 0;
 }
 
 section .air.air4 {
@@ -116,7 +141,7 @@ section .air.air4 {
     z-index: 997;
     opacity: 0.7;
     animation-delay: -5s;
-    bottom: 20px;
+    bottom: 0;
 }
 
 @keyframes wave {
