--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     flex-direction: column;
     background-color: aqua;
@@ -13,6 +13,11 @@
     background-color: rgba(21, 16, 16, 0.879);
     border-radius: 1.5rem 1.5rem 0 1.5rem;
     box-shadow: 15px 15px 15px 5px rgba(9, 0, 59, 0.6);
+}
+
+#cabecera {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 #userName,
@@ -84,21 +89,21 @@
 @media (min-width: 1080px) {
     #form {
         width: 35%;
-        height: 70%;
+        height: 65%;
     }
 }
 
 @media (max-width: 1024px) {
     #form {
         width: 60%;
-        height: 70%;
+        height: 65%;
     }
 }
 
 @media (max-width: 800px) {
     #form {
         width: 80%;
-        height: 70%;
+        height: 65%;
     }
 }
 
@@ -123,6 +128,7 @@
         height: 60%;
         padding: 1rem;
     }
+
     h4 {
         font-size: 20px;
     }
