--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -2,10 +2,9 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    /* justify-content: space-evenly; */
     align-items: center;
     flex-direction: column;
-    background-color: aqua;
+    background-color: rgb(0, 125, 198);
 }
 
 #form {
